--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>underrubrik</h1>
-    <p>text</p>
+    <p>texasfuafbuasgbst</p>
+    
+
+    <!--add clickable hyperlink-->
+    <a href="http://www.google.com">google</a>
 </body>
 </html>
