--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <title>titel</title>
 </head>
 <body>
-    <h1>underrubrik</h1>
-    <p>texasfuafbuasgbst</p>
-    
+    <h1>Mina uppgifter</h1>
+    <p>texasfuafbuasgbs</p>
 
-    <!--add clickable hyperlink-->
-    <a href="http://www.google.com">google</a>
+    <a href="http://osctorand.github.io/uppgifter/20240118">uppgift 1a 2024-01-18</a>
 </body>
 </html>
