--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>titel</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
     <h1>Mina uppgifter</h1>
-    <p>texasfuafbuasgbs</p>
 
-    <a href="http://osctorand.github.io/uppgifter/20240118">uppgift 1a 2024-01-18</a>
+    <a href="/uppgifter/20240118.html">uppgift 1a 2024-01-18</a>
 </body>
 </html>
