--- a/uppgifter/20240118.html
+++ b/uppgifter/20240118.html
@@ -9,6 +9,6 @@
     <p>2024-01-18</p>
     <a href="/index.html">tillbaka</a>
     <h1>Uppgift 1</h1>
-    <img align="left" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Andrus_Ansip_with_Robert_M._Gates.jpg/250px-Andrus_Ansip_with_Robert_M._Gates.jpg">
+    <img align="left" style="width:800px;height:500px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Andrus_Ansip_with_Robert_M._Gates.jpg/250px-Andrus_Ansip_with_Robert_M._Gates.jpg">
 </body>
 </html>
