--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Mina uppgifter</h1>
-
-    <a href="/uppgifter/20240118.html">uppgift 1a 2024-01-18</a>
+    <h1>Startsida</h1>
+    <h3>Mina uppgifter</h3>
+    <ul>
+        <li><a href="/uppgifter/20240118.html">testsida</a></li>
+        <li><a href="/uppgifter/guidelines/answers.html">uppgift 2024-01-23</a></li>
+    </ul>
 </body>
 </html>
