--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Startsida</h1>
     <h3>Mina uppgifter</h3>
     <ul>
-        <li><a href="/uppgifter/testuppgift/20240118.html">testsida</a></li>
-        <li><a href="/uppgifter/guidelines/answers.html">uppgift 2024-01-23</a></li>
-        <li><a href="/uppgifter/lagar/answers.html">uppgift 2024-01-24</a></li>
+      <li><a href="/uppgifter/testuppgift/20240118.html">testsida</a></li>
+      <li>
+        <a href="/uppgifter/guidelines/answers.html">uppgift 2024-01-23</a>
+      </li>
+      <li><a href="/uppgifter/lagar/answers.html">uppgift 2024-01-24</a></li>
     </ul>
-</body>
+  </body>
 </html>
