--- a/uppgifter/lagar/answers.html
+++ b/uppgifter/lagar/answers.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Svar</title>
-</head>
-<body>
+  </head>
+  <body>
     <h2><a href="/index.html">tillbaka</a></h2>
-</body>
+  </body>
 </html>
