--- a/uppgifter/testuppgift/20240118.html
+++ b/uppgifter/testuppgift/20240118.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Svar</title>
 </head>
 <body>
     <p>2024-01-18</p>
     <a href="/index.html">tillbaka</a>
+    <br /><a href="http://jesperfrid.github.io/index.html">jeppe hemsida 👍jepe</a>
     <h1>Uppgift 1</h1>
     <img align="left" style="width:800px;height:500px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Andrus_Ansip_with_Robert_M._Gates.jpg/250px-Andrus_Ansip_with_Robert_M._Gates.jpg">
     <p>Borde ej använda "align", använd css istället</p>
