svarade på frågorna

--- a/uppgifter/newmapp/nyfil.html
+++ b/uppgifter/newmapp/nyfil.html
@@ -11,6 +11,11 @@
     <h1>En valid sida</h1>
     <p>Detta är en valid sida</p>
     <a href="/index.html">tillbaka</a>
+
+    <ol>
+        <li>De skrivs med skift och knappen brevid skift-tangenten.</li>
+        <li>ASCII och UTF-8</li>
+    </ol>
 </body>
 
 </html>
