svarade rätt på frågorma

--- a/uppgifter/newmapp/nyfil.html
+++ b/uppgifter/newmapp/nyfil.html
@@ -13,8 +13,9 @@
     <a href="/index.html">tillbaka</a>
 
     <ol>
-        <li>De skrivs med skift och knappen brevid skift-tangenten.</li>
+        <li>De skrivs med skift och knappen brevid skift-tangenten, eller med &amp;lt; och &amp;gt;</li>
         <li>ASCII och UTF-8</li>
+
     </ol>
 </body>
 
