gjorde dagens uppgift

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </li>
     <li><a href="/uppgifter/lagar/answers.html">uppgift 2024-01-24</a></li>
     <li><a href="/uppgifter/newmapp/nyfil.html">uppgift 2024-01-30</a></li>
+    <li><a href="/uppgifter/textformatting/textformattering-menu.html">Textformattering</a></li>
   </ul>
 </body>
 
