--- a/uppgifter/textformatting/alltogether.html
+++ b/uppgifter/textformatting/alltogether.html
@@ -15,7 +15,7 @@
                         med texten
         </pre>
         En <strong><em>väldigt lång</em></strong> text som kräver flera <br>
-        radbrytningar för att inte bli <br> aldeles för lång.
+        radbrytningar för att inte bli <br> alldeles för lång.
 
         <h2>Fakta om min hemsida</h2>
         <hr>
