lade till meta description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Min sida för webbutveckling 1 VT24">
+
   <title>Oscar Andersson - Huvudmeny</title>
 </head>
 
