slutförde uppgiften, svarade på frågorna, fixade formattering och mindre ändringar

--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Min sida för webbutveckling 1 VT24">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Min sida för webbutveckling 1 VT24">
+    <title>Oscar Andersson - Huvudmeny</title>
+  </head>
 
-  <title>Oscar Andersson - Huvudmeny</title>
-</head>
-
-<body>
-  <h1>Startsida</h1>
-  <h3>Mina uppgifter</h3>
-  <ul>
-    <li><a href="/uppgifter/testuppgift/20240118.html">testsida</a></li>
-    <li>
-      <a href="/uppgifter/guidelines/answers.html">uppgift 2024-01-23</a>
-    </li>
-    <li><a href="/uppgifter/lagar/answers.html">uppgift 2024-01-24</a></li>
-    <li><a href="/uppgifter/newmapp/nyfil.html">uppgift 2024-01-30</a></li>
-    <li><a href="/uppgifter/textformatting/textformattering-menu.html">Textformattering</a></li>
-  </ul>
-</body>
+  <body>
+    <h1>Startsida</h1>
+    <h3>Mina uppgifter</h3>
+    <menu>
+      <li><a href="/uppgifter/testuppgift/20240118.html">testsida</a></li>
+      <li><a href="/uppgifter/guidelines/answers.html">uppgift 2024-01-23</a></li>
+      <li><a href="/uppgifter/lagar/answers.html">uppgift 2024-01-24</a></li>
+      <li><a href="/uppgifter/newmapp/nyfil.html">uppgift 2024-01-30</a></li>
+      <li><a href="/uppgifter/textformatting/textformattering-menu.html">Textformattering</a></li>
+    </menu>
+  </body>
 
 </html>
