--- a/uppgifter/textformatting/alltogether.html
+++ b/uppgifter/textformatting/alltogether.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
     </head>
+
     <body>
         <h1>Min färdiga hemsida</h1>
         <pre>
@@ -13,19 +15,13 @@
                 mig göra
                     vad jag vill
                         med texten
-        </pre>
-        En <strong><em>väldigt lång</em></strong> text som kräver flera <br>
-        radbrytningar för att inte bli <br> alldeles för lång.
-
-        <h2>Fakta om min hemsida</h2>
+        </pre> En <strong><em>väldigt lång</em></strong> text som kräver flera <br> radbrytningar för att inte bli <br>
+        alldeles för lång. <h2>Fakta om min hemsida</h2>
         <hr>
-       <strong> Vad är det för fakta om min hemsida?</strong> <br>
-        ingen aning
+        <strong> Vad är det för fakta om min hemsida?</strong> <br> ingen aning
         <hr>
-        <strong>Har jag med allt som krävs?</strong> <br>
-        tror det.
+        <strong>Har jag med allt som krävs?</strong> <br> tror det.
         <hr>
-
-
     </body>
+
 </html>
