tydliggjorde titel för sida

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li><a href="/uppgifter/guidelines/answers.html">uppgift 2024-01-23</a></li>
       <li><a href="/uppgifter/lagar/answers.html">uppgift 2024-01-24</a></li>
       <li><a href="/uppgifter/newmapp/nyfil.html">uppgift 2024-01-30</a></li>
-      <li><a href="/uppgifter/textformatting/textformattering-menu.html">Textformattering</a></li>
+      <li><a href="/uppgifter/textformatting/textformattering-menu.html">Textformattering (uppgift 2024-01-31)</a></li>
     </menu>
   </body>
 
