gjorde dagens uppgift. inte klar.

--- a/css-uppgifter/css-intro/bolditalicmarkcss.html
+++ b/css-uppgifter/css-intro/bolditalicmarkcss.html
@@ -12,6 +12,7 @@
     <h2>Men <span class="emphasized">hur fungerar</span> egentligen dethär?</h2>
     <p>Genom att använda bland annat <span class="marked">span</span> och <span class="marked">div</span></p>
 
+    <p id="skumfont">den här paragrafen har skitskumt typsnitt</p>
 
 </body>
 </html>
