glömde ladda upp uppgifter innan

--- a/ny-hemsida/sida.html
+++ b/ny-hemsida/sida.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-    
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Min nya hemsida</title>
+        <link rel="stylesheet" type="text/css" href="sidastyle.css">
+    </head>
+
+    <body>
+        <img id="gubbensomskakarhand"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Andrus_Ansip_with_Robert_M._Gates.jpg/250px-Andrus_Ansip_with_Robert_M._Gates.jpg"
+        alt="ful gubbe som skakar hand">
+        <h1>Min nya hemsida</h1>
+        <p id="intro">finare sida än den förra</p>
+    </body>
+
 </html>
