förfinade gamla uppgifter

--- a/css-uppgifter/länkaruppgift/button.html
+++ b/css-uppgifter/länkaruppgift/button.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="buttonstyle.css">
 </head>
 <body>
-    
+    <h1>Sida som visar en ensam button med ridge</h1>
+    <a href="svd.se">Svenska Dagbladet</a>
 </body>
 </html>
