dagens (inte klar)

--- a/css-uppgifter/tableforms/tablebody.html
+++ b/css-uppgifter/tableforms/tablebody.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <h1>Tabell med tbody, tfoot - Uppgift</h1>
+        <h1>Table med tbody, tfoot - Uppgift</h1>
         <table>
             <caption><em>frukter</em></caption>
             <thead>
