liten uppdatering :) formattera bara :)

--- a/flexbox-uppgifter/testprov1/bilder/website.html
+++ b/flexbox-uppgifter/testprov1/bilder/website.html
@@ -41,16 +41,24 @@
             </div>
             <div class="fourbuttons">
                 <div id="analytics">
-                    <i class="fa-solid fa-chart-column"></i> <h2>Analytics</h2> <p>Some text about analytics</p>
+                    <i class="fa-solid fa-chart-column"></i>
+                    <h2>Analytics</h2>
+                    <p>Some text about analytics</p>
                 </div>
                 <div id="marketing">
-                    <i class="fa-solid fa-bullhorn"></i> <h2>Marketing</h2> <p>Some text about marketing</p>
+                    <i class="fa-solid fa-bullhorn"></i>
+                    <h2>Marketing</h2>
+                    <p>Some text about marketing</p>
                 </div>
                 <div id="development">
-                    <i class="fa-solid fa-server"></i> <h2>Development</h2> <p>Some text about development</p>
+                    <i class="fa-solid fa-server"></i>
+                    <h2>Development</h2>
+                    <p>Some text about development</p>
                 </div>
                 <div id="support">
-                    <i class="fa-regular fa-address-card"></i> <h2>Support</h2> <p>Some text about support</p>
+                    <i class="fa-regular fa-address-card"></i>
+                    <h2>Support</h2>
+                    <p>Some text about support</p>
                 </div>
             </div>
             <form action="post">
@@ -79,7 +87,6 @@
                             <input type="checkbox" name="programmingSkills" id="skillCPP" checked>
                         </div>
                         <div id="cs">
-
                             <label for="skillCS" class="skillCS">C#</label>
                             <input type="checkbox" name="programmingSkills" id="skillCS">
                         </div>
