kopierade gamla uppgifter och änrade för nya provet. namnen stämmerinte. ändrad = nya kopia = gamla

--- a/flexbox-uppgifter/exprov prov/bilder/website.html
+++ b/flexbox-uppgifter/exprov prov/bilder/website.html
@@ -61,7 +61,7 @@
                     <p>Some text about support</p>
                 </div>
             </div>
-            <form action="post">
+            <form>
                 <div id="genderdiv">
                     <fieldset id="gender">
                         <legend>Gender* </legend>
